# mkdocs-multi-theme-plugin

./: pyproject.toml
mkdocs_multi_theme_plugin/: __init__.py  plugin.py
